fix gaps between arches

--- a/style/mainGrid.css
+++ b/style/mainGrid.css
@@ -64,7 +64,7 @@ body {
     width: calc(100vw / 2);
     height: calc(100vh / 3 * 2);
     float: left;
-} 
+}
 
 #anomie-marquee {
     width: inherit;
@@ -79,6 +79,7 @@ body {
 }
 
 #portal-a {
+    position: relative;
     width: calc(100vw / 8);
     height: inherit;
     float: left;
@@ -92,6 +93,7 @@ body {
 }
 
 #portal-b {
+    position: relative;
     width: calc(100vw / 8);
     height: inherit;
     float: left;
@@ -105,6 +107,7 @@ body {
 }
 
 #portal-c {
+    position: relative;
     width: calc(100vw / 8);
     height: inherit;
     float: left;
@@ -113,11 +116,24 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.portals div:after {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 6px;
+  background: #eee;
+  right: -3px;
+  top: 0;
+  z-index: 1000;
+}
+
 #portal-c:hover {
     /* Add hover affects to second portal tab. */
 }
 
 #portal-d {
+    position: relative;
     width: calc(100vw / 8);
     height: inherit;
     float: left;
@@ -159,6 +175,31 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 #bottom-panel-right:hover {
     /* Add hover affects to octagon window. */
+}
+
+.svg-top div {
+  position: relative;
+}
+
+.svg-top div:after {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 6px;
+  background: #eee;
+  right: -3px;
+  top: 0;
+}
+
+.svg-top div:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 6px;
+  background: #eee;
+  right: 0;
+  top: -3px;
 }
